--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             alt="equilibrium icon"
           />
         </div>
+        
         <div class="text1">Equilibrium #3429</div>
         <div class="text2">
           Our Equilibrium collection promotes balance and calm.
@@ -55,9 +56,10 @@
           </div>
           <div style="color: #8BACD9;" class="text5">
             Creation of
-            <span style="color: white;" class="text6">Jules Wyvern</span>
+            <span class="text6">Jules Wyvern</span>
           </div>
         </div>
+    
       </div>
     </div>
   </body>
